automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -92,7 +92,7 @@
    "source": [
     "vacation_days = 1\n",
     "if False:\n",
-    "    # code does not run because conditional argument is False\n",
+    "    # code below does not run because result of conditional argument is False\n",
     "    vacation_days += 1"
    ]
   },
