automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -204,18 +204,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def long_vacation(number_of_days):\n",
     "    if number_of_days > 4:\n",
-    "        return 'that is a long vacation'"
+    "        return 'that is a long vacation'\n",
+    "    else"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -226,7 +227,7 @@
        "'that is a long vacation'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
