--- a/index.ipynb
+++ b/index.ipynb
@@ -211,7 +211,8 @@
     "def long_vacation(number_of_days):\n",
     "    if number_of_days > 4:\n",
     "        return 'that is a long vacation'\n",
-    "    else"
+    "    else:\n",
+    "        return 'you didn\\'t "
    ]
   },
   {
