--- a/index.ipynb
+++ b/index.ipynb
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,12 +212,12 @@
     "    if number_of_days > 4:\n",
     "        return 'that is a long vacation'\n",
     "    else:\n",
-    "        return 'you didn\\'t "
+    "        return 'you didn\\'t vacation for long enough'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -228,7 +228,7 @@
        "'that is a long vacation'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,9 +239,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"you didn't vacation for long enough\""
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "long_vacation(3) # None"
    ]
