automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -363,7 +363,7 @@
    ],
    "source": [
     "vacation_days = 1\n",
-    "if vacation_days:\n",
+    "if vacation_days: #\n",
     "    # this is run\n",
     "    vacation_days += 1\n",
     "vacation_days"
