automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -356,14 +356,14 @@
        "2"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "vacation_days = 1\n",
-    "if vacation_days: #\n",
+    "if vacation_days: #if the variable exists...\n",
     "    # this is run\n",
     "    vacation_days += 1\n",
     "vacation_days"
