--- a/index.ipynb
+++ b/index.ipynb
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -463,13 +463,13 @@
        "False"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bool(0) # False"
+    "bool() # False"
    ]
   },
   {
