automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -436,7 +436,7 @@
    ],
    "source": [
     "greeting = ''\n",
-    "if greeting:\n",
+    "if greeting: #empty string evaluates as \n",
     "    greeting += 'Hello'\n",
     "else:\n",
     "    greeting += 'Goodbye'\n",
@@ -469,7 +469,7 @@
     }
    ],
    "source": [
-    "bool() # False"
+    "bool(0) # False"
    ]
   },
   {
