--- a/index.ipynb
+++ b/index.ipynb
@@ -436,7 +436,7 @@
    ],
    "source": [
     "greeting = ''\n",
-    "if greeting: #empty string evaluates as \n",
+    "if greeting: #empty string evaluates as falsy\n",
     "    greeting += 'Hello'\n",
     "else:\n",
     "    greeting += 'Goodbye'\n",
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -519,7 +519,7 @@
        "['hello', 'hola', 'hallo']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
