automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -516,10 +516,10 @@
     {
      "data": {
       "text/plain": [
-       "['hello', 'hola', 'hallo']"
+       "['ciao']"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,7 +530,7 @@
     "def starts_with_h(words):\n",
     "    selected = []\n",
     "    for word in words:\n",
-    "        if word.startswith('h'):\n",
+    "        if word.startswith(''):\n",
     "            selected.append(word)\n",
     "    return selected \n",
     "\n",
