--- a/index.ipynb
+++ b/index.ipynb
@@ -530,8 +530,8 @@
     "def starts_with_h(words):\n",
     "    selected = []\n",
     "    for word in words:\n",
-    "        if word.startswith('h'):\n",
-    "            selected.append(word)\n",
+    "        #if word.startswith('h'):\n",
+    "            #selected.append(word)\n",
     "    return selected \n",
     "\n",
     "starts_with_h(greetings)"
