--- a/index.ipynb
+++ b/index.ipynb
@@ -532,6 +532,7 @@
     "    for word in words:\n",
     "        #if word.startswith('h'):\n",
     "            #selected.append(word)\n",
+    "        if len(word) >=\n",
     "    return selected \n",
     "\n",
     "starts_with_h(greetings)"
