automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -532,7 +532,8 @@
     "    for word in words:\n",
     "        #if word.startswith('h'):\n",
     "            #selected.append(word)\n",
-    "        if len(word) >=\n",
+    "        if len(word) >= 4:\n",
+    "            selected.appe\n",
     "    return selected \n",
     "\n",
     "starts_with_h(greetings)"
