automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
@@ -516,10 +516,10 @@
     {
      "data": {
       "text/plain": [
-       "['hello', 'hola', 'hallo']"
+       "['hello', 'bonjour', 'hola', 'hallo', 'ciao', 'namaste', 'salam']"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,8 +532,8 @@
     "    for word in words:\n",
     "        #if word.startswith('h'):\n",
     "            #selected.append(word)\n",
-    "        if len(word) >= 4:\n",
-    "            selected.appe\n",
+    "        if len(word) >= :\n",
+    "            selected.append(word)\n",
     "    return selected \n",
     "\n",
     "starts_with_h(greetings)"
