--- a/index.ipynb
+++ b/index.ipynb
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -516,10 +516,10 @@
     {
      "data": {
       "text/plain": [
-       "['hello', 'bonjour', 'hola', 'hallo', 'ciao', 'namaste', 'salam']"
+       "['hello', 'bonjour', 'hallo', 'namaste', 'salam']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +532,7 @@
     "    for word in words:\n",
     "        #if word.startswith('h'):\n",
     "            #selected.append(word)\n",
-    "        if len(word) >= :\n",
+    "        if len(word) >= 5:\n",
     "            selected.append(word)\n",
     "    return selected \n",
     "\n",
